--- a/src/app/Components/navigation/navigation.component.html
+++ b/src/app/Components/navigation/navigation.component.html
@@ -1,20 +1,17 @@
 <ul class="nav-bar">
-    
-    <li>
-      <a class="nav-link" routerLink="home" routerLinkActive="active" id="home" >HOME</a>
-    </li>
-    
-    <li>
-      <a class="nav-link" routerLink="add" routerLinkActive="active" id="add" >+ADD</a>
-    </li>
-  
-  
-    
-  
-      <img src="./assets/blog-icon.png" alt="" class="nav-img" >
-  
-  </ul>
+  <li>
+    <a class="nav-link" routerLink="home" routerLinkActive="active" id="home"
+      >HOME</a
+    >
+  </li>
 
-  <router-outlet></router-outlet>
-  
-  
+  <li>
+    <a class="nav-link" routerLink="add" routerLinkActive="active" id="add"
+      >+ADD</a
+    >
+  </li>
+
+  <img src="assets/images/blog-icon.png" alt="" class="nav-img" />
+</ul>
+
+<router-outlet></router-outlet>
