--- a/src/app/careers/components/allcontactsview/allcontactsview.component.scss
+++ b/src/app/careers/components/allcontactsview/allcontactsview.component.scss
@@ -1,71 +1,47 @@
+$cursortype: pointer;
 
-$cursortype:pointer;
-
-$sizing:border-box;
-
+$sizing: border-box;
 
 
 
-.contact_heading
-{
-    color:black;
-    font-weight:600;
-    font-size:17px;
-    margin:27px 0 15px 36px;
+.contact-heading {
+  color: black;
+  font-weight: 600;
+  font-size: 17px;
+  margin: 27px 0 15px 0px;
 }
 
+.contacts-block {
+  
+  width: 318px;
+  margin: 17px 0px 0px 0px;
+  border-top: 1px solid rgb(221, 221, 211);
+  border-left: 1px solid rgb(221, 221, 211);
+  border-right: 1px solid rgb(221, 221, 211);
 
-#contacts-block
-{
-    
-    padding:0;  
-    width:318px;
-    margin:17px 0px 0px 36px;
-    border-top:1px solid rgb(221,221,211);
-    border-left:1px solid rgb(221,221,211);
-    border-right:1px solid rgb(221,221,211);
+  a {
+    text-decoration: none;
+    padding: 9px 0px 0px 22px;
+    margin: 0;
+    height: 100px;
+    box-sizing: $sizing;
+    border-bottom: 1px solid rgb(221, 221, 211);
 
-
-    ul
-    {
-    padding:9px 0px 0px 22px;
-    margin:0;
-    height:100px;
-    list-style: none;
-    box-sizing:$sizing;
-    border-bottom:1px solid rgb(221,221,211);
-
-
-
-       
-   }
-
+    li {
+      color: black;
+      list-style-type: none;
+      box-sizing: border-box;
+      padding-left: 12px;
+    }
+  }
 }
 
-
-
-
-
-
-
-
-
-#contact-name
-{
-    font-size:18px;  
-}
-
-
-.contact_details:hover
-{
-    cursor:$cursortype;
-}
-
-
-ul.active_contact
-{
-    background-color:rgb(207,231,243);;
+#contact-name {
+  font-size: 18px;
 }
 
 
 
+.active-contact {
+  background-color: rgb(207, 231, 243);
+}
