--- a/src/app/careers/components/contactsform/contactsform.component.html
+++ b/src/app/careers/components/contactsform/contactsform.component.html
@@ -1,33 +1,45 @@
-<div class='pop_up'>
+<div class="pop_up">
+  <form action="" id="frm" [formGroup]="contactform" (ngSubmit)="submitForm()">
+    <label for="Name" id="namelabel" >Name
+      <span class="imp" >*
+        <span class="errormessage" *ngIf="!this.contactform.valid">{{ formerrors.name }}
+        </span>
+      </span> 
+    </label>
+    <br />
+    <input type="text" id="name" formControlName="name" /><br />
 
-    <form action="" id="frm" [formGroup]="contactform" (ngSubmit)="showdata()">
+    <label for="Email" class="p-0" >Email
+      <span class="imp" >*
+        <span class="errormessage" *ngIf="!this.contactform.valid">{{ formerrors.email }}
+        </span>
+      </span> 
+    </label>
+    <br />
+    <input type="email" id="email" formControlName="email" /><br />
 
-              <label for="Name" id="namelabel">Name<span class="imp">*
-                <span class="errormessage" *ngIf='!this.contactform.valid'>{{formerrors.name}}</span>
-              </span></label><br>
-              <input type="text" id="name" formControlName="name"><br>
-              
-              <label for="Email">Email<span class="imp">*
-                <span class="errormessage" *ngIf='!this.contactform.valid'>{{formerrors.email}}</span>
-              </span></label><br>
-              <input type="email"  id="email" formControlName="email"><br>
-   
-              <span id="mobilecontainer"><label for="Moblie">Mobile<span class="imp">*
-                <span class="errormessage" *ngIf='!this.contactform.valid'>{{formerrors.mobile}}</span>
-              </span></label><br>
-               <input type="number" formControlName="mobile"  id="mobile" ><br></span>
-   
-              <span id="landlinecontainer"><label for="Landline" id="landlinelabel">Landline</label><br>
-               <input type="number" formControlName="landline" id="landline"><br></span><br>
-              
-              <label for="Website">Website</label><br>
-              <input type="text" name="Website" id="website" formControlName="website"><br>
-   
-              <label for="Address">Address</label><br>
-              <input type="text" id="address" formControlName="address"><br>
-               
-              <button type="submit" id="btn">Add</button>
+    <span id="mobilecontainer">
+      <label for="Moblie" class="p-0">Mobile
+        <span class="imp">*
+          <span class="errormessage" *ngIf="!this.contactform.valid">{{ formerrors.mobile }}
+          </span>
+        </span> 
+      </label>
+    <br />
+    <input type="number" formControlName="mobile" id="mobile" /><br/>
+  </span>
 
-   </form>
+    <span id="landlinecontainer">
+      <label for="Landline" id="landlinelabel" class="p-0">Landline</label><br />
+      <input type="number" formControlName="landline" id="landline" /><br />
+      </span> <br />
 
+    <label for="Website" class="p-0">Website</label><br />
+    <input type="text" name="Website" id="website" formControlName="website"/><br />
+
+    <label for="Address" class="p-0">Address</label><br />
+    <input type="text" id="address" formControlName="address" /><br />
+
+    <button type="submit" id="btn">Add</button>
+  </form>
 </div>
