--- a/src/app/Components/app/app.component.scss
+++ b/src/app/Components/app/app.component.scss
@@ -1,22 +1,13 @@
-$font:white;
-$bgcolor:#3398CC;
-$cursortype:pointer;
-$flex:inline-flex;
-$sizing:border-box;
-$nodecoration:none;
+$font: white;
+$bgcolor: #3398cc;
+$sizing: border-box;
 
-
-
-
-.top_heading{
+.top-heading {
   box-sizing: $sizing;
-  padding:18px 0 0 25px;
-  height:123px;  
-  background-color:$bgcolor;   
-  font-size:56px;
-  margin:0;
-  color:rgb(250,255,255);
-  font-weight:300;
-
+  padding: 18px 0 0 25px;
+  height: 123px;
+  background-color: $bgcolor;
+  font-size: 56px;
+  color: $font;
+  font-weight: 300;
 }
-
