--- a/src/app/careers/components/activecontactview/activecontactview.component.html
+++ b/src/app/careers/components/activecontactview/activecontactview.component.html
@@ -1,11 +1,20 @@
-
-           <div class="display_contact" id="display-contact">
-            <h3 id="d-name">{{activeContactData.name}}</h3>
-            <ul>
-                <li >Email:  <span id='d-email'>{{activeContactData.email}}</span></li>
-                <li >Mobile:<span id="d-mobile">{{activeContactData.mobile}}</span></li>
-                <li >Landline:<span id="d-landline">{{activeContactData.landline}}</span></li>
-                <li >Website:<span id="d-website">{{activeContactData.website}}</span></li>
-                <li>Address: <span id="d-address">{{activeContactData.address}}</span></li>
-            </ul>
-        </div>
+<div class="display_contact">
+  <h3 id="d-name">{{ activeContactData.name }}</h3>
+  <ul class="m-0 p-0">
+    <li class="mt-3">
+      Email: <span id="d-email">{{ activeContactData.email }}</span>
+    </li>
+    <li class="mt-2">
+      Mobile:<span id="d-mobile">{{ activeContactData.mobile }}</span>
+    </li>
+    <li class="mt-2">
+      Landline:<span id="d-landline">{{ activeContactData.landline }}</span>
+    </li>
+    <li class="mt-2">
+      Website:<span id="d-website">{{ activeContactData.website }}</span>
+    </li>
+    <li class="mt-2">
+      Address: <span id="d-address">{{ activeContactData.address }}</span>
+    </li>
+  </ul>
+</div>
