--- a/src/app/careers/components/home/home.component.scss
+++ b/src/app/careers/components/home/home.component.scss
@@ -1,44 +1,32 @@
+$cursortype: pointer;
+$flex: inline-flex;
 
-$cursortype:pointer;
-$flex:inline-flex;
-
-
-
-:host
-{
-    width:100%;
-}
-
-.row
-{
-    margin:0;
+:host {
+  width: 100%;
 }
 
 
-#actions
-{
-    display:$flex;
-    margin:61px 0 0 0;
 
-
-          span
-           {
-    
-              color:black;
-              font-size:16px;
-              cursor:$cursortype;
-
-                       img
-                         {
-                             display:$flex;
-                             padding:0 6px 0 5px;
-                          }
-           }
+#actions {
+  display: $flex;
+  margin: 61px 0 0 0;
+  span {
+    color: black;
+    font-size: 16px;
+    cursor: $cursortype;
+    img {
+      display: $flex;
+      padding: 0 6px 0 5px;
+    }
+  }
 }
 
-.empty-img
-{
-    display:inline-block;
-    margin-left: 500px;
-    
+.empty-img {
+  display: inline-block;
+  margin-left: 700px;
+}
+
+.emptyAlert {
+  text-align: center;
+  margin-left: 110px;
 }
