--- a/src/app/careers/components/Contacts-Form/ContactsForm.component.scss
+++ b/src/app/careers/components/Contacts-Form/ContactsForm.component.scss
@@ -1,6 +1,4 @@
-$cursortype: pointer;
-$flex: inline-flex;
-$sizing: border-box;
+@import '../../../../../src/styles.scss';
 
 div.pop_up {
   height: 570px;
