--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+$cursortype: pointer;
+$font: white;
+$bgcolor: #3398cc;
+$sizing: border-box;
+$cursortype: pointer;
+$flex: inline-flex;
+$nodecoration: none;
+
 body{
     margin:0;
     font-family: "Segoe UI";
