--- a/src/app/Components/navigation/navigation.component.scss
+++ b/src/app/Components/navigation/navigation.component.scss
@@ -1,47 +1,35 @@
-$sizing: border-box;
-$nodecoration: none;
+@import "../../../styles.scss";
 
 :host {
   margin: 0px;
   padding: 0px;
 }
 
-.nav-bar {
-  list-style-type: $nodecoration;
-  margin: 0px;
-  padding: 0px;
-  background-color: rgb(51, 51, 51);
-  color: white;
+.navbar-nav{
+  margin-top: 0px;
+  font-size: 13px;
+  background-color: black;
   height: 40px;
+  .nav-link {
+    font-weight: 700;
+    text-decoration: none;
+    margin: 0 0 0 7px;
+  }
+  
 
-  li {
-    display: inline-block;
-    height: 40px;
+  .active {
+    font-weight: 800;
+    background-color: #ff9900;
+    border-left: 3px solid white;
+  }
+  .blog {
+    margin: 8px 15px auto auto;
   }
 }
 
-.nav-link {
-  display: inline-block;
-  text-decoration: $nodecoration;
-  box-sizing: $sizing;
-  height: 100%;
-  width: 84px;
-  font-size: 15px;
-  font-weight: 700;
-  cursor: pointer;
+.nav-link a {
   color: white;
-  padding: 8px 0 0 20px;
-  margin: 0 0 0 5px;
-}
-
-.active {
-  background-color: rgb(255, 153, 0);
-  color: black;
-  border-left: 3px solid white;
-}
-
-.nav-img {
-  float: right;
-  width: 25px;
-  margin: 8px 22px 0px 0px;
+  text-decoration: none;
+  padding: 10px 13px 14px 13px;
+  margin: auto auto 0 4px;
 }
