changes made on 21-04-2021

--- a/src/app/Components/navigation/navigation.component.html
+++ b/src/app/Components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<ul class="navbar-nav d-flex flex-row">
-  <li class="nav-link"><a routerLink="/home" routerLinkActive="active text-dark" class="m-0">HOME</a></li>
-  <li class="nav-link"><a routerLink="/add" routerLinkActive="active text-dark" class="m-0">+ADD</a></li>
-  <li class="blog"><img src="assets/images/blog-icon.png" height="24px" alt="blog icon.img" >
+<ul class="navbar d-flex flex-row justify-content-start m-0 p-0">
+  <li class="nav-link m-0 p-0 ml-1"><a routerLink="/home" routerLinkActive="active text-dark" class='pt-2'>HOME</a></li>
+  <li class="nav-link m-0 p-0 ml-1"><a routerLink="/add" routerLinkActive="active text-dark" class='pt-2'>+ADD</a></li>
+  <li class="blog" class="ml-auto"><img src="assets/images/blog-icon.png" height="24px" alt="blog icon.img"  class="d-flex mr-2">
   </li>
 </ul>
 
