--- a/src/app/careers/components/Contacts-Form/ContactsForm.component.html
+++ b/src/app/careers/components/Contacts-Form/ContactsForm.component.html
@@ -38,7 +38,7 @@
     <input type="text" name="Website" id="website" formControlName="website"/><br />
 
     <label for="Address" class="p-0">Address</label><br />
-    <input type="text" id="address" formControlName="address" /><br />
+    <textarea id="address" formControlName="address"  rows="4" cols="69"></textarea><br />
 
     <button type="submit" id="btn">Add</button>
   </form>
