--- a/src/app/careers/components/home/home.component.html
+++ b/src/app/careers/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row m-0" *ngIf="!this.isEmpty">
+<div class="row m-0" *ngIf="!this.isEmpty && !this.isInvalidId">
   <div class="col-sm-2">
     <app-allcontactsview ></app-allcontactsview>
   </div>
@@ -23,10 +23,11 @@
 </div>
 
 
-<div  class="row m-0" *ngIf="this.isEmpty">
+<div  class="row m-0" *ngIf="this.isEmpty || this.isInvalidId">
   <div class="col-4"></div>
   <div id="not_found" class="col-4">
       <img src="assets/images/search1.png">
-      <h2>NO CONTACTS FOUND </h2>
+      <h2 *ngIf="this.isEmpty" class="text-danger">NO CONTACTS FOUND!!! </h2>
+      <h2 *ngIf="this.isInvalidId" class="text-danger">ID NOT FOUND!!! </h2>
   </div>
 </div>
