--- a/src/app/careers/components/Contacts-Form/ContactsForm.component.html
+++ b/src/app/careers/components/Contacts-Form/ContactsForm.component.html
@@ -37,7 +37,7 @@
     <label for="Website" class="p-0">Website</label><br />
     <input type="text" name="Website" id="website" formControlName="website"/><br />
 
-    <label for="Address" class="p-0">Address</label><br />
+    <label for="address" class="p-0">Address</label><br />
     <textarea id="address" formControlName="address"  rows="4" cols="69"></textarea><br />
 
     <button type="submit" id="btn">Add</button>
