--- a/src/app/careers/components/home/home.component.html
+++ b/src/app/careers/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row m-0" *ngIf="!this.isEmpty && !this.isInvalidId">
+<div class="row m-0" *ngIf="!this.isEmpty  && !loading">
   <div class="col-sm-2">
     <app-allcontactsview ></app-allcontactsview>
   </div>
@@ -21,11 +21,32 @@
   </div>
 </div>
 
-<div  class="row m-0" *ngIf="this.isEmpty || this.isInvalidId">
+<div  class="row m-0" *ngIf="this.isEmpty && !loading">
   <div class="col-4"></div>
   <div id="not_found" class="col-4">
       <img src="assets/images/search1.png">
-      <h2 *ngIf="this.isEmpty" class="text-danger">NO CONTACTS FOUND!!! </h2>
-      <h2 *ngIf="this.isInvalidId" class="text-danger">ID NOT FOUND!!! </h2>
+      <h2 *ngIf="this.isEmpty && !loading" class="text-danger">NO CONTACTS FOUND!!! </h2>
+  </div>
+</div>
+
+<!-- skeleton loading -->
+
+<div *ngIf="loading">
+  <div class="row mt-5 ms-3">
+    <div class="col-md-2">
+      <div class="item">
+        <ngx-skeleton-loader count="1" [theme]="{ 'border-radius': '0', height: '16px' }"></ngx-skeleton-loader>
+        <ngx-skeleton-loader count="5" [theme]="{ 'border-radius': '0', height: '50px' }"></ngx-skeleton-loader>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="item">
+        <ngx-skeleton-loader count="1" [theme]="{ 'border-radius': '0', height: '16px' }"></ngx-skeleton-loader>
+        <ngx-skeleton-loader count="5" [theme]="{ 'border-radius': '0', height: '50px' }"></ngx-skeleton-loader>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <ngx-skeleton-loader count="1" [theme]="{ 'border-radius': '0', height: '32px' }"></ngx-skeleton-loader>
+    </div>
   </div>
 </div>
